--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,21 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_caculate_emi"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_emi" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_compare"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_compare" />
+    <item
+        android:id="@+id/navigation_news"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_news" />
+    <item
+        android:id="@+id/navigation_tips"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_tips" />
 
 </menu>
